--- a/src/routes/Detail.module.css
+++ b/src/routes/Detail.module.css
@@ -14,19 +14,28 @@
 }
 
 .menu {
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
 }
 
+.menu1 {
+    margin-bottom: 10px;
+    
+}
+
 .countDiv {
-    margin-right: 20px;
+    width: 115px;
+    display: inline;
     margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 18px;
+    padding-left: 8px;
     padding-bottom: 10px;
 }
 
 #itemCount {
-    width: 50px;
+    width: 40px;
     text-align: center;
 }
 
@@ -38,11 +47,12 @@
 
 #putIn,
 #goBasket,
-#goPurchase,
-#goBack {
-    margin-left: 7px;
-    margin-right: 7px;
+#goPurchase {
+    width: 115px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
+
 
 /* 알림창 */
 .salesAlert {
