Cart페이지 모바일버전 스타일 변경

--- a/src/routes/Cart.module.css
+++ b/src/routes/Cart.module.css
@@ -20,16 +20,29 @@
 
 .basketTableHead th{
     text-align: center;
+    vertical-align: middle;
+}
+
+.headId,
+.headQuan {
+    width: 52px;
+}
+
+.headChange {
+    width: 140px;
 }
 
 .basketTableBody {
     text-align: center;
 }
 
+.basketTableBody td {
+    vertical-align: middle;
+}
 .quanChangeBtn button {
-    width: 30px;
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 27px;
+    margin-left: 3px;
+    margin-right: 3px;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -105,3 +118,5 @@
 .goBackBtn {
     background-color: #212529;
 }
+
+
