--- a/src/components/AddBasketModal.module.css
+++ b/src/components/AddBasketModal.module.css
@@ -18,7 +18,7 @@
 .modalBox {
     position: absolute;
     background-color: #ffffff;
-    width: 30%;
+    width: 40%;
     height: 220px;
     padding: 30px;
 }
@@ -31,31 +31,32 @@
 }
 
 .btnGroup {
-    width: 55%;
     display: flex;
+    justify-content: center;
     margin: auto;
 }
 
 .modalBox .closeBtn {
     display: block;
-    width: 130px;
-    margin: 0 auto;
+    width: 100px;
+    margin-left: 15px;
     margin-top: 40px;
     background-color: #212529;
     border: 1px solid black;
     border-radius: 3px;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 .modalBox .goBasketBtn {
     display: block;
     width: 130px;
-    margin: 0 auto;
     margin-top: 40px;
     background-color: #212529;
     border: 1px solid black;
     border-radius: 3px;
-    padding-left: 20px;
-    padding-right: 20px;
+}
+
+@media screen and (max-width: 1360px){
+    .modalBox {
+        width: 55%;
+    }
 }
