--- a/src/components/Payment.module.css
+++ b/src/components/Payment.module.css
@@ -18,7 +18,7 @@
 .modalBox {
     position: absolute;
     background-color: #ffffff;
-    width: 30%;
+    width: 40%;
     height: 450px;
     padding: 30px;
 }
@@ -52,4 +52,15 @@
     border-radius: 3px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+
+@media screen and (max-width: 980px){
+    .modalBox {
+        width: 55%;
+        height: 480px;
+    }
+    #title {
+        font-size: 22px;
+    }
 }
