--- a/src/routes/Detail.module.css
+++ b/src/routes/Detail.module.css
@@ -37,22 +37,30 @@
 #itemCount {
     width: 40px;
     text-align: center;
+    border: 1px solid grey;
 }
 
 #plusBtn,
 #minusBtn {
     width: 30px;
     font-size: 16px;
+    border: 1px solid grey;
 }
 
-#putIn,
-#goBasket,
-#goPurchase {
-    width: 115px;
-    margin-left: 10px;
+#goBasket {
+    width: 60px;
+    height: 36px;
+    background: #ffffff;
+    color: rgb(88, 87, 87);
+    border: 1px solid rgb(88, 87, 87);
     margin-right: 10px;
 }
 
+#goPurchase {
+    width: 160px;
+    background: black;
+    border: none;
+}
 
 /* 알림창 */
 .salesAlert {
