--- a/src/components/Home/HomePopularItem.module.css
+++ b/src/components/Home/HomePopularItem.module.css
@@ -1,4 +1,4 @@
-#MainPopularItemDiv {
+#HomePopularItemDiv {
     width: 300px;
     margin: 70px;
     margin: auto;
@@ -7,8 +7,24 @@
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-#MainPopularItemDiv:hover {
+#HomePopularItemDiv:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.shoes-title {
+    margin-top : 10px;
+    font-size : 19px;
+    color : Black;
+}
+
+.shoes-content {
+    font-size : 15px;
+    color : grey;
+}   
+
+.shoes-price {
+    font-size : 15px;
+    color : grey;
 }
 
 .itemImage {
