필요없는 파일 삭제 및 manifest.json 수정

--- a/src/components/Home/HomePopularItem.module.css
+++ b/src/components/Home/HomePopularItem.module.css
@@ -14,17 +14,18 @@
 .shoes-title {
     margin-top : 10px;
     font-size : 19px;
+    font-weight: bold;
     color : Black;
 }
 
 .shoes-content {
     font-size : 15px;
-    color : grey;
+    color : Black;
 }   
 
 .shoes-price {
     font-size : 15px;
-    color : grey;
+    color : Black;
 }
 
 .itemImage {
